--- a/projects/ngx-explorer/package.json
+++ b/projects/ngx-explorer/package.json
@@ -17,13 +17,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GuilleLegend/ngx-file-explorer.git"
+    "url": "https://github.com/GuilleLegend/Artemis-Code-File-Explorer-Component"
   },
-  "author": "@artemnih",
+  "author": "@GuilleLegend, @agilmoy",
   "license": "MIT",
   "description": "Simple File Explorer for Angular",
   "bugs": {
-    "url": "https://github.com/GuilleLegend/ngx-file-explorer/issues"
+    "url": "https://github.com/GuilleLegend/Artemis-Code-File-Explorer-Component/issues"
   },
   "keywords": [
     "angular",
